--- a/Model_Cat.ipynb
+++ b/Model_Cat.ipynb
@@ -30,6 +30,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "66264491",
+   "metadata": {},
+   "source": [
+    "Read the train and test datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "67bc748f",
@@ -38,6 +46,14 @@
    "source": [
     "train=pd.read_csv(\"train_I.csv\")\n",
     "test=pd.read_csv(\"test_I.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad5d83c4",
+   "metadata": {},
+   "source": [
+    "check the count of null values in each column"
    ]
   },
   {
@@ -71,6 +87,14 @@
     "# Filter for columns with non-zero null counts\n",
     "null_cols = null_counts[null_counts > 0]\n",
     "print(null_cols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "998f677c",
+   "metadata": {},
+   "source": [
+    "Fill the null values with mean value"
    ]
   },
   {
@@ -115,6 +139,14 @@
    ],
    "source": [
     "train.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c95b7825",
+   "metadata": {},
+   "source": [
+    "Drop the string columns from train and test dataset"
    ]
   },
   {
@@ -527,6 +559,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2405ff94",
+   "metadata": {},
+   "source": [
+    "get the columns with high correlation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "id": "5aa39243",
@@ -547,6 +587,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "319ad59d",
+   "metadata": {},
+   "source": [
+    "Drop the columns having high correlation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "d084e92d",
@@ -560,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b32feb53",
+   "id": "75d2a0c2",
    "metadata": {},
    "outputs": [
     {
@@ -580,6 +628,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d6ca5586",
+   "metadata": {},
+   "source": [
+    "Create X by dropping the expected column and y with expected column to train and predict the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "id": "178ec34f",
@@ -592,7 +648,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "416b33c5",
+   "id": "98f13885",
+   "metadata": {},
+   "source": [
+    "Used GridsearchCV to get the best number of features to provide as input to Recursive feature elimination method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b45d45a0",
    "metadata": {},
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
@@ -634,6 +698,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e90dea2e",
+   "metadata": {},
+   "source": [
+    "selected 60 columns using Recursive feature elimination. The parameter n_features_to_select for RFE is selected based on the output from gridsearchCV"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5d86ceaa",
@@ -672,9 +744,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "18ccf4a5",
+   "metadata": {},
+   "source": [
+    "select the features received from Recursive feature elimination method and set X and y values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2a8b75e0",
+   "id": "2b57b237",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,6 +786,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "748c6e1a",
+   "metadata": {},
+   "source": [
+    "Initialized catBoostClassifier and trained the model. Calculated the f1 score for internal validation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "id": "7418d104",
@@ -732,6 +820,14 @@
     "f1= f1_score(y_test, y_pred)\n",
     "print(f1)\n",
     "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f35fd83",
+   "metadata": {},
+   "source": [
+    "Predict the values using test dataset and create submission file using to_csv method."
    ]
   },
   {
