--- a/Descriptors.ipynb
+++ b/Descriptors.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "5bebad5f",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "616ecc9d",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        "(75383, 2)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1448d0c2",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "31858b5d",
    "metadata": {},
    "outputs": [
@@ -93,30 +93,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[01:08:33] Explicit valence for atom # 1 Si, 8, is greater than permitted\n",
-      "[01:08:35] Explicit valence for atom # 1 Si, 8, is greater than permitted\n",
-      "[01:08:37] Explicit valence for atom # 1 Si, 8, is greater than permitted\n",
-      "[01:08:37] Explicit valence for atom # 1 Si, 8, is greater than permitted\n",
-      "[01:08:39] Explicit valence for atom # 1 Si, 8, is greater than permitted\n",
-      "[01:08:40] Explicit valence for atom # 1 Si, 8, is greater than permitted\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 75377 entries, 0 to 75382\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column    Non-Null Count  Dtype \n",
-      "---  ------    --------------  ----- \n",
-      " 0   Id        75377 non-null  object\n",
-      " 1   Expected  75377 non-null  int64 \n",
-      " 2   Id1       75377 non-null  object\n",
-      " 3   Id2       75377 non-null  object\n",
-      " 4   Smiles    75377 non-null  object\n",
-      "dtypes: int64(1), object(4)\n",
-      "memory usage: 3.5+ MB\n"
+      "[19:53:28] Explicit valence for atom # 1 Si, 8, is greater than permitted\n",
+      "[19:53:29] Explicit valence for atom # 1 Si, 8, is greater than permitted\n",
+      "[19:53:31] Explicit valence for atom # 1 Si, 8, is greater than permitted\n",
+      "[19:53:31] Explicit valence for atom # 1 Si, 8, is greater than permitted\n",
+      "[19:53:33] Explicit valence for atom # 1 Si, 8, is greater than permitted\n",
+      "[19:53:34] Explicit valence for atom # 1 Si, 8, is greater than permitted\n"
      ]
     }
    ],
@@ -137,10 +119,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d7d55825",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 75377 entries, 0 to 75382\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column    Non-Null Count  Dtype \n",
+      "---  ------    --------------  ----- \n",
+      " 0   Id        75377 non-null  object\n",
+      " 1   Expected  75377 non-null  int64 \n",
+      " 2   Id1       75377 non-null  object\n",
+      " 3   Id2       75377 non-null  object\n",
+      " 4   Smiles    75377 non-null  object\n",
+      "dtypes: int64(1), object(4)\n",
+      "memory usage: 3.5+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "train=train.dropna()\n",
     "test=test.dropna()\n",
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "47634f01",
    "metadata": {},
    "outputs": [],
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "ed88a377",
    "metadata": {},
    "outputs": [],
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "300c36b7",
    "metadata": {},
    "outputs": [],
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "19b481ee",
    "metadata": {},
    "outputs": [
@@ -304,7 +305,7 @@
        "      <td>0</td>\n",
        "      <td>1644</td>\n",
        "      <td>C1=CC(=CC=C1C(C2=CC=C(C=C2)O)C(Cl)(Cl)Cl)O</td>\n",
-       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fe02dbc1eb0&gt;</td>\n",
+       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fdedbcabc10&gt;</td>\n",
        "      <td>C1=CC(=CC=C1C(C2=CC=C(C=C2)O)C(Cl)(Cl)Cl)O;1644</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -328,7 +329,7 @@
        "      <td>0</td>\n",
        "      <td>2451</td>\n",
        "      <td>CCCCCCCCC(=O)C</td>\n",
-       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fe02dbc1c10&gt;</td>\n",
+       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fdedbcab9e0&gt;</td>\n",
        "      <td>CCCCCCCCC(=O)C;2451</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -352,7 +353,7 @@
        "      <td>0</td>\n",
        "      <td>1384</td>\n",
        "      <td>CCCCCCCCCC[N+](C)(C)CCCCCCCCCC.[Cl-]</td>\n",
-       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fe02dbc1a50&gt;</td>\n",
+       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fdedbcabac0&gt;</td>\n",
        "      <td>CCCCCCCCCC[N+](C)(C)CCCCCCCCCC.[Cl-];1384</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -376,7 +377,7 @@
        "      <td>0</td>\n",
        "      <td>16</td>\n",
        "      <td>C1CN(C(=N1)N[N+](=O)[O-])CC2=CN=C(C=C2)Cl</td>\n",
-       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fe02dbc1c80&gt;</td>\n",
+       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fdedbcabb30&gt;</td>\n",
        "      <td>C1CN(C(=N1)N[N+](=O)[O-])CC2=CN=C(C=C2)Cl;16</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -400,7 +401,7 @@
        "      <td>0</td>\n",
        "      <td>1856</td>\n",
        "      <td>[Na+].[I-]</td>\n",
-       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fe02dbc1d60&gt;</td>\n",
+       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fdedbcab970&gt;</td>\n",
        "      <td>[Na+].[I-];1856</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -448,7 +449,7 @@
        "      <td>0</td>\n",
        "      <td>33</td>\n",
        "      <td>COC(=O)NS(=O)(=O)C1=CC=C(C=C1)N</td>\n",
-       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fe09b2c1510&gt;</td>\n",
+       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fdeba6d5040&gt;</td>\n",
        "      <td>COC(=O)NS(=O)(=O)C1=CC=C(C=C1)N;33</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -472,7 +473,7 @@
        "      <td>0</td>\n",
        "      <td>1632</td>\n",
        "      <td>CCOP(=S)(OCC)OC1=NN(C(=N1)Cl)C(C)C</td>\n",
-       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fe09b2c1580&gt;</td>\n",
+       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fdeba6d50b0&gt;</td>\n",
        "      <td>CCOP(=S)(OCC)OC1=NN(C(=N1)Cl)C(C)C;1632</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -496,7 +497,7 @@
        "      <td>0</td>\n",
        "      <td>1373</td>\n",
        "      <td>C1=CC=C2C(=C1)NC(=S)S2</td>\n",
-       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fe09b2c15f0&gt;</td>\n",
+       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fdeba6d5120&gt;</td>\n",
        "      <td>C1=CC=C2C(=C1)NC(=S)S2;1373</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -520,7 +521,7 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>CCCCC(CC)C=O</td>\n",
-       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fe09b2c1660&gt;</td>\n",
+       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fdeba6d5190&gt;</td>\n",
        "      <td>CCCCC(CC)C=O;2</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -544,7 +545,7 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>CC(C)(C)C1=CC(=CC(=C1O)C(C)(C)C)CCC(=O)NCCCCCC...</td>\n",
-       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fe09b2c16d0&gt;</td>\n",
+       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x7fdeba6d5200&gt;</td>\n",
        "      <td>CC(C)(C)C1=CC(=CC(=C1O)C(C)(C)C)CCC(=O)NCCCCCC...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -620,17 +621,17 @@
        "75376  CC(C)(C)C1=CC(=CC(=C1O)C(C)(C)C)CCC(=O)NCCCCCC...   \n",
        "\n",
        "                                                 Smiles  \\\n",
-       "0      <rdkit.Chem.rdchem.Mol object at 0x7fe02dbc1eb0>   \n",
-       "1      <rdkit.Chem.rdchem.Mol object at 0x7fe02dbc1c10>   \n",
-       "2      <rdkit.Chem.rdchem.Mol object at 0x7fe02dbc1a50>   \n",
-       "3      <rdkit.Chem.rdchem.Mol object at 0x7fe02dbc1c80>   \n",
-       "4      <rdkit.Chem.rdchem.Mol object at 0x7fe02dbc1d60>   \n",
+       "0      <rdkit.Chem.rdchem.Mol object at 0x7fdedbcabc10>   \n",
+       "1      <rdkit.Chem.rdchem.Mol object at 0x7fdedbcab9e0>   \n",
+       "2      <rdkit.Chem.rdchem.Mol object at 0x7fdedbcabac0>   \n",
+       "3      <rdkit.Chem.rdchem.Mol object at 0x7fdedbcabb30>   \n",
+       "4      <rdkit.Chem.rdchem.Mol object at 0x7fdedbcab970>   \n",
        "...                                                 ...   \n",
-       "75372  <rdkit.Chem.rdchem.Mol object at 0x7fe09b2c1510>   \n",
-       "75373  <rdkit.Chem.rdchem.Mol object at 0x7fe09b2c1580>   \n",
-       "75374  <rdkit.Chem.rdchem.Mol object at 0x7fe09b2c15f0>   \n",
-       "75375  <rdkit.Chem.rdchem.Mol object at 0x7fe09b2c1660>   \n",
-       "75376  <rdkit.Chem.rdchem.Mol object at 0x7fe09b2c16d0>   \n",
+       "75372  <rdkit.Chem.rdchem.Mol object at 0x7fdeba6d5040>   \n",
+       "75373  <rdkit.Chem.rdchem.Mol object at 0x7fdeba6d50b0>   \n",
+       "75374  <rdkit.Chem.rdchem.Mol object at 0x7fdeba6d5120>   \n",
+       "75375  <rdkit.Chem.rdchem.Mol object at 0x7fdeba6d5190>   \n",
+       "75376  <rdkit.Chem.rdchem.Mol object at 0x7fdeba6d5200>   \n",
        "\n",
        "                                                      Id  Expected  \n",
        "0        C1=CC(=CC=C1C(C2=CC=C(C=C2)O)C(Cl)(Cl)Cl)O;1644         2  \n",
@@ -648,7 +649,7 @@
        "[75377 rows x 213 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c33db71",
+   "id": "2311976a",
    "metadata": {},
    "outputs": [],
    "source": []
